--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -1,12 +1,13 @@
 
-      
-   GO  
-      
-
+               
+   GO LANGUAGE  
+               
 
 
 TODO:
-  - https://golang.org/doc/cmd
+  - commands:
+     - https://golang.org/cmd/
+     - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
      - https://pkg.go.dev/golang.org/x/tools
@@ -14,7 +15,6 @@ TODO:
         - https://golang.org/doc/effective_go.html#commentary
         - https://github.com/golang/go/wiki/Comments
      - https://github.com/golang/go/wiki/GOPATH
-     - https://github.com/golang/go/wiki/MultipleGoRoots
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
      - https://github.com/golang/go/wiki/PackagePublishing
@@ -32,6 +32,7 @@ TODO:
         - https://github.com/golang/go/wiki/Timeouts
         - https://github.com/golang/go/wiki/RateLimiting
   - https://golang.org/doc/diagnostics.html
+     - redocument gofmt -cpuprofile flag
   - https://github.com/golang?type=source
   - add VSCode shortcuts
   - go through to_learn.txt
@@ -1016,8 +1017,7 @@ package PACKAGE                   #Declare:
 
 package main                      #CLI entry point (as opposed to programmatic)
                                   #Must have a main FUNC
-
-"MODULE_PATH[/PATH]"              #"IMPORT_PATH", identifier of a PACKAGE
+                                  #By convention, filename is main.go
 
 EXPORT ==>                        #Any top-level variable whose variable name starts with uppercase letter is exported
                                   #Recommended not to namespace their variable name, since package already namespaces them
@@ -1049,19 +1049,3 @@ INITIALIZATION ORDER ==>          #If a top-level declaration depends on another
                                   #  - order depends on how it was compiled:
                                   #     - FILE...: arguments order
                                   #     - DIR: filename alphabetical order
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            RUNTIME            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-import "runtime"                  #
-
-runtime.NumCPU()->INT             #Number of CPU cores
-runtime.GOMAXPROCS(0)->INT2       #Max number of goroutines running in parallel
-runtime.GOMAXPROCS(INT)->INT2     #Sets it, and returns the previous one
-ENVVAR GOMAXPROCS                 #Default value for runtime.GOMAXPROCS.
-                                  #Def: runtime.NumCPU()
